--- a/.github/workflows/rust-validation.yml
+++ b/.github/workflows/rust-validation.yml
@@ -17,7 +17,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Validate cargo
+      - name: Install dependencies
         run: |
+          curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
           cargo update
+
+      - name: Validate code
+        run: |
           cargo check
