--- a/.github/workflows/code-validation.yml
+++ b/.github/workflows/code-validation.yml
@@ -1,4 +1,4 @@
-name: Validate JS
+name: Validate Code
 on:
   push:
     branches:
@@ -10,21 +10,32 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  js-code-validation:
-    name: JS code validation
+  rust-code-validation:
+    name: Rust validation
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+          cargo update
+      - name: Validate code
+        run: |
+          cargo check
 
+  js-code-validation:
+    name: JS validation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Install NodeJS
         uses: actions/setup-node@v4
         with:
           node-version: 22.9.0
-
       - run: |
           corepack enable
-
       - name: Restore dependencies
         id: restore-dependencies
         uses: actions/cache@v4
@@ -33,13 +44,10 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
       - name: Install Packages
         if: ${{ steps.restore-dependencies.outputs.cache-hit != 'true' }}
         run: yarn
-
       - name: Validate types
         run: yarn types
-
       - name: Validate linters
         run: yarn lint
