--- a/configs/typescript/tsconfig.rules.json
+++ b/configs/typescript/tsconfig.rules.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
     "strict": true,
-    "noEmit": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "incremental": true
+    "incremental": true,
   }
 }
