--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     ],
     "module": "esnext",
     "moduleResolution": "node",
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "typeRoots": [
       "node_modules/@types",
       "./web/typings"
