--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/styled-engine": "^6.4.6",
     "@mui/system": "^6.4.6",
     "@mui/types": "^7.2.21",
+    "lodash-es": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -36,6 +37,7 @@
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.18.0",
     "@stylistic/eslint-plugin": "^4.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
