--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/styled-engine": "^6.4.6",
     "@mui/system": "^6.4.6",
     "@mui/types": "^7.2.21",
+    "lodash-es": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -36,10 +37,11 @@
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.18.0",
     "@stylistic/eslint-plugin": "^4.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/webpack-env": "^1.16.2",
+    "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.27.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -55,7 +57,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "file-loader": "^6.2.0",
     "globals": "^15.14.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.6.3",
     "husky": "^9",
     "mini-css-extract-plugin": "^2.4.5",
     "nodemon": "^2.0.12",
