add github packages config resolution for yarn

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,13 @@
 compressionLevel: mixed
-
 enableGlobalCache: false
-
 nodeLinker: node-modules
+injectEnvironmentFiles: [
+  ".env",
+]
+npmScopes: {
+  arthurhovhannisyan31: {
+    npmRegistryServer: "https://npm.pkg.github.com",
+    npmAuthToken: "${NODE_AUTH_TOKEN-}",
+    npmAlwaysAuth: true
+  }
+}
