--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,10 @@
 compressionLevel: mixed
 enableGlobalCache: false
 nodeLinker: node-modules
-injectEnvironmentFiles: [
-  ".env",
-]
-npmScopes: {
-  arthurhovhannisyan31: {
-    npmRegistryServer: "https://npm.pkg.github.com",
-    npmAuthToken: "${NODE_AUTH_TOKEN-}",
+injectEnvironmentFiles:
+  - .env?
+npmScopes:
+  arthurhovhannisyan31:
     npmAlwaysAuth: true
-  }
-}
+    npmAuthToken: "${NODE_AUTH_TOKEN-}"
+    npmRegistryServer: "https://npm.pkg.github.com"
