--- a/.github/workflows/code-validation.yml
+++ b/.github/workflows/code-validation.yml
@@ -42,6 +42,8 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install Packages
         if: ${{ steps.restore-dependencies.outputs.cache-hit != 'true' }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
         run: yarn
       - name: Validate types
         run: yarn types
