add yarn bundle file to use in vercel build pipeline

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,16 @@
 compressionLevel: mixed
+
 enableGlobalCache: false
-nodeLinker: node-modules
+
 injectEnvironmentFiles:
   - .env?
+
+nodeLinker: node-modules
+
 npmScopes:
   arthurhovhannisyan31:
     npmAlwaysAuth: true
     npmAuthToken: "${NODE_AUTH_TOKEN-}"
     npmRegistryServer: "https://npm.pkg.github.com"
+
+yarnPath: .yarn/releases/yarn-4.9.1.cjs
