--- a/.github/workflows/code-validation.yml
+++ b/.github/workflows/code-validation.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Validate code
         run: |
           cargo check
+      - name: Validate linters
+        run: |
+          ./configs/scripts/cargo-fmt.sh
 
   js-code-validation:
     name: JS validation
