--- a/.github/workflows/packages-validation.yml
+++ b/.github/workflows/packages-validation.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - run: rustup toolchain install stable --profile minimal
+      - uses: Swatinem/rust-cache@v2
+        with:
+          key: ${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
       - name: Install Cargo audit
         run: |
           cargo install cargo-audit
